# masterproef

./: CMakeLists.txt  main.cpp  make_gif.py  make_graph.py  scatter_plot_maker.py  visualizer.py
src/Clarck-Wright/: ClassicCW.cpp  ClassicCW.h  ImprovedCW.cpp  ImprovedCW.h
src/Experiments/: GELGA_not_random_init.cpp  GELGA_not_random_init.h
src/GELSGA/: gelsga.cpp  gelsga.h
src/PSA/: PSA.cpp  PSA.h
src/bee_colony/: bee_colony.cpp  bee_colony.h
src/util/: Route.cpp  Route.h  TSPLIB95_parser.cpp  TSPLIB95_parser.h  common.cpp  common.h
